Improve exception reporting